[PROD RDY] Added creator tag in footer (still not fixed social buttons to stop wrapping, added stub info for personal projects in code, added some lines in work experience

--- a/src/styles/stylesheets/components/_Footer.scss
+++ b/src/styles/stylesheets/components/_Footer.scss
@@ -6,6 +6,11 @@
   margin-bottom: 0;
   color: $dark_grey;
 }
+
+#Creator {
+  font-size: 10px;
+}
+
 #Social-Links {
   padding: 0 0 3px;
 }
