--- a/src/styles/stylesheets/components/_WorkExperience.scss
+++ b/src/styles/stylesheets/components/_WorkExperience.scss
@@ -3,6 +3,13 @@
 #Experiences-Row {
   padding-bottom: 40px;
 }
+
+#Company-Title {
+  border-bottom-color: black;
+  border-bottom-width: thin;
+  border-bottom-style: solid;
+}
+
 #Mojio-Experience {
   position: relative;
   z-index: 1;
